{
  "version": 4,
  "terraform_version": "1.12.2",
  "serial": 911,
  "lineage": "e7e41a18-5c14-e289-5d79-728c1eab3bbd",
  "resources": [
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_eip",
      "name": "eks_network_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd90de0ca9bca62a",
            "arn": "arn:aws:ec2:us-east-1:250139002704:elastic-ip/eipalloc-0fd90de0ca9bca62a",
            "association_id": "eipassoc-0ba2e9d569a5b0152",
            "domain": "vpc",
            "id": "eipalloc-0fd90de0ca9bca62a",
            "network_border_group": "us-east-1",
            "network_interface": "eni-06e9083fa77e8031b",
            "private_dns": "ip-31-0-0-227.ec2.internal",
            "private_ip": "31.0.0.227",
            "public_dns": "ec2-52-206-222-21.compute-1.amazonaws.com",
            "public_ip": "52.206.222.21",
            "public_ipv4_pool": "amazon",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-nat-gateway"
            },
            "tags_all": {
              "Name": "testing-env-nat-gateway"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.eks_network_gateway",
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "eks_network_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:internet-gateway/igw-08378ec98731a3544",
            "id": "igw-08378ec98731a3544",
            "owner_id": "250139002704",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env"
            },
            "tags_all": {
              "Name": "testing-env"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_nat_gateway",
      "name": "eks_network_nat_gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "allocation_id": "eipalloc-0fd90de0ca9bca62a",
            "association_id": "eipassoc-0ba2e9d569a5b0152",
            "connectivity_type": "public",
            "id": "nat-0abc4f6109db37bd9",
            "network_interface_id": "eni-06e9083fa77e8031b",
            "private_ip": "31.0.0.227",
            "public_ip": "52.206.222.21",
            "region": "us-east-1",
            "secondary_private_ip_address_count": 0,
            "subnet_id": "subnet-03718f090f18f0d94",
            "tags": {
              "Name": "testing-env"
            },
            "tags_all": {
              "Name": "testing-env"
            }
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.eks_network_nat_gateway",
            "module.networking.aws_internet_gateway.eks_network_gateway",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "internet-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "igw-08378ec98731a3544",
            "id": "r-rtb-09ce605142b7c403c1080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-09ce605142b7c403c",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_internet_gateway.eks_network_gateway",
            "module.networking.aws_route_table.eks_network_public",
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route",
      "name": "nat-gateway",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "carrier_gateway_id": "",
            "core_network_arn": "",
            "destination_cidr_block": "0.0.0.0/0",
            "destination_ipv6_cidr_block": "",
            "destination_prefix_list_id": "",
            "egress_only_gateway_id": "",
            "gateway_id": "",
            "id": "r-rtb-0bcf6f07975ba3ad91080289494",
            "instance_id": "",
            "instance_owner_id": "",
            "local_gateway_id": "",
            "nat_gateway_id": "nat-0abc4f6109db37bd9",
            "network_interface_id": "",
            "origin": "CreateRoute",
            "region": "us-east-1",
            "route_table_id": "rtb-0bcf6f07975ba3ad9",
            "state": "active",
            "timeouts": null,
            "transit_gateway_id": "",
            "vpc_endpoint_id": "",
            "vpc_peering_connection_id": ""
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_eip.eks_network_nat_gateway",
            "module.networking.aws_internet_gateway.eks_network_gateway",
            "module.networking.aws_nat_gateway.eks_network_nat_gateway",
            "module.networking.aws_route_table.eks_network_private",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_network_private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:route-table/rtb-0bcf6f07975ba3ad9",
            "id": "rtb-0bcf6f07975ba3ad9",
            "owner_id": "250139002704",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "nat-0abc4f6109db37bd9",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-env-private"
            },
            "tags_all": {
              "Name": "testing-env-private"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table",
      "name": "eks_network_public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:route-table/rtb-09ce605142b7c403c",
            "id": "rtb-09ce605142b7c403c",
            "owner_id": "250139002704",
            "propagating_vgws": [],
            "region": "us-east-1",
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-08378ec98731a3544",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {
              "Name": "testing-env-public"
            },
            "tags_all": {
              "Name": "testing-env-public"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-03c95586f01e8fa11",
            "region": "us-east-1",
            "route_table_id": "rtb-0bcf6f07975ba3ad9",
            "subnet_id": "subnet-084b6ee2727b5fe60"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-08cd7536698f1a63c",
            "region": "us-east-1",
            "route_table_id": "rtb-0bcf6f07975ba3ad9",
            "subnet_id": "subnet-0c617a6e17646692e"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.eks_network"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-074a324334840cf57",
            "region": "us-east-1",
            "route_table_id": "rtb-0bcf6f07975ba3ad9",
            "subnet_id": "subnet-0eb42a8302f1400c9"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_private",
            "module.networking.aws_subnet.private",
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0b84f6535d10f0961",
            "region": "us-east-1",
            "route_table_id": "rtb-09ce605142b7c403c",
            "subnet_id": "subnet-03718f090f18f0d94"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-062aef3ea8315597a",
            "region": "us-east-1",
            "route_table_id": "rtb-09ce605142b7c403c",
            "subnet_id": "subnet-0f5d4d09bfb6a4abd"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ]
        },
        {
          "index_key": 2,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ca0902f377397e40",
            "region": "us-east-1",
            "route_table_id": "rtb-09ce605142b7c403c",
            "subnet_id": "subnet-007db0406411196ba"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_route_table.eks_network_public",
            "module.networking.aws_subnet.public",
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "control_plane",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:security-group/sg-0c0d1a2b45b8efed0",
            "description": "Cluster communication with worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication from the cluster control plane",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Allow worker Kubelets and pods to receive communication on localhost",
                "from_port": 8080,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 8500
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 10250
              }
            ],
            "id": "sg-0c0d1a2b45b8efed0",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow workstation to communicate with the cluster API Server",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "Allow Node groups to cluster commmunication",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 443
              }
            ],
            "name": "eks-control-plane-testing-env",
            "name_prefix": "",
            "owner_id": "250139002704",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "eks-control-plane-testing-env"
            },
            "tags_all": {
              "Name": "eks-control-plane-testing-env"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "worker_node_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:security-group/sg-05486e9f9dde092e3",
            "description": "Security group for EKS worker nodes",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "Allow all outbound traffic",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-05486e9f9dde092e3",
            "ingress": [
              {
                "cidr_blocks": [
                  "31.0.0.0/16"
                ],
                "description": "VPC CIDR",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Allow all traffic within the security group",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": true,
                "to_port": 0
              },
              {
                "cidr_blocks": [],
                "description": "Cluster API to node kubelets",
                "from_port": 10250,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d1a2b45b8efed0"
                ],
                "self": false,
                "to_port": 10250
              },
              {
                "cidr_blocks": [],
                "description": "Cluster control plane SG for Cluster API to node groups",
                "from_port": 443,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d1a2b45b8efed0"
                ],
                "self": false,
                "to_port": 443
              },
              {
                "cidr_blocks": [],
                "description": "From control plane to 1025-65535",
                "from_port": 1025,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [
                  "sg-0c0d1a2b45b8efed0"
                ],
                "self": false,
                "to_port": 65535
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS UDP",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "udp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node CoreDNS",
                "from_port": 53,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 53
              },
              {
                "cidr_blocks": [],
                "description": "Node to node MySQL",
                "from_port": 3306,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": true,
                "to_port": 3306
              }
            ],
            "name": "testing-env-worker-node-sg",
            "name_prefix": "",
            "owner_id": "250139002704",
            "region": "us-east-1",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "testing-env-worker-node-sg"
            },
            "tags_all": {
              "Name": "testing-env-worker-node-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.control_plane",
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-endpoint-connection",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": "Allow workstation to communicate with the cluster API Server",
            "from_port": 443,
            "id": "sgrule-466301660",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c0d1a2b45b8efed0",
            "security_group_rule_id": "sgr-083834c07fec73f26",
            "self": false,
            "source_security_group_id": null,
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.control_plane",
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "cluster-node",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": null,
            "description": "Allow Node groups to cluster commmunication",
            "from_port": 443,
            "id": "sgrule-1908011130",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "region": "us-east-1",
            "security_group_id": "sg-0c0d1a2b45b8efed0",
            "security_group_rule_id": "sgr-0c7c0c43fe809c2c5",
            "self": false,
            "source_security_group_id": "sg-0c0d1a2b45b8efed0",
            "timeouts": null,
            "to_port": 443,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_security_group.control_plane",
            "module.networking.aws_vpc.eks_network"
          ]
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-084b6ee2727b5fe60",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "31.0.3.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-084b6ee2727b5fe60",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-private-1",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "testing-env-private-1",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-0c617a6e17646692e",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "31.0.4.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0c617a6e17646692e",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-private-2",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "testing-env-private-2",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-0eb42a8302f1400c9",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "31.0.5.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0eb42a8302f1400c9",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-private-2",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "tags_all": {
              "Name": "testing-env-private-2",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/internal-elb": "1",
              "subnet-type": "private"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-03718f090f18f0d94",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az1",
            "cidr_block": "31.0.0.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-03718f090f18f0d94",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-public-us-east-1a",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "testing-env-public-us-east-1a",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-0f5d4d09bfb6a4abd",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az2",
            "cidr_block": "31.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0f5d4d09bfb6a4abd",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-public-us-east-1b",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "testing-env-public-us-east-1b",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        },
        {
          "index_key": 2,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:subnet/subnet-007db0406411196ba",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1c",
            "availability_zone_id": "use1-az4",
            "cidr_block": "31.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-007db0406411196ba",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "250139002704",
            "private_dns_hostname_type_on_launch": "ip-name",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env-public-us-east-1c",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "tags_all": {
              "Name": "testing-env-public-us-east-1c",
              "kubernetes.io/cluster/testing-env": "shared",
              "kubernetes.io/role/alb-ingress": "1",
              "kubernetes.io/role/elb": "1",
              "subnet-type": "public"
            },
            "vpc_id": "vpc-0cca03bbf267428ef"
          },
          "identity_schema_version": 0,
          "dependencies": [
            "module.networking.aws_vpc.eks_network",
            "module.networking.data.aws_availability_zones.available"
          ],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.networking",
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks_network",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:250139002704:vpc/vpc-0cca03bbf267428ef",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "31.0.0.0/16",
            "default_network_acl_id": "acl-08dc70456c91fd106",
            "default_route_table_id": "rtb-080c919dba631d1bc",
            "default_security_group_id": "sg-09384265ff782a4f7",
            "dhcp_options_id": "dopt-07f8c3b01eff2fc2d",
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0cca03bbf267428ef",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-080c919dba631d1bc",
            "owner_id": "250139002704",
            "region": "us-east-1",
            "tags": {
              "Name": "testing-env"
            },
            "tags_all": {
              "Name": "testing-env"
            }
          },
          "identity_schema_version": 0,
          "create_before_destroy": true
        }
      ]
    }
  ]
}